--- a/RazorPagesWeb/Pages/Orders/Display.cshtml
+++ b/RazorPagesWeb/Pages/Orders/Display.cshtml
@@ -44,4 +44,6 @@ else
         </div>
         <button type="submit" class="btn btn-primary">Update order</button>
     </form>
+
+    <p><a class="btn btn-danger" asp-page="./Delete" asp-route-id="@Model.Order.Id">Delete order</a></p>
 }
