--- a/RazorPagesWeb/Pages/Shared/_Layout.cshtml
+++ b/RazorPagesWeb/Pages/Shared/_Layout.cshtml
@@ -22,10 +22,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="Food/List">Menu</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Food/List">Menu</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="Orders/Create">Order</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Orders/Create">Order</a>
                         </li>
                     </ul>
                 </div>
