--- a/RazorPagesWeb/Pages/Orders/Display.cshtml
+++ b/RazorPagesWeb/Pages/Orders/Display.cshtml
@@ -31,6 +31,11 @@ else
                 <td><strong>Quantity: </strong></td>
                 <td>@Model.Order.Quantity</td>
             </tr>
+            <tr>
+                <td colspan="2">
+                    <a class="btn btn-danger" asp-page="./Delete" asp-route-id="@Model.Order.Id">Delete order</a>
+                </td>
+            </tr>
         </tbody>
     </table>
 
@@ -45,5 +50,4 @@ else
         <button type="submit" class="btn btn-primary">Update order</button>
     </form>
 
-    <p><a class="btn btn-danger" asp-page="./Delete" asp-route-id="@Model.Order.Id">Delete order</a></p>
 }
