Added MVC UI functionality to update order info.

--- a/MVCWeb/Views/Food/Index.cshtml
+++ b/MVCWeb/Views/Food/Index.cshtml
@@ -6,8 +6,8 @@
 
 <h1>Menu</h1>
 
-<table class="table table-dark">
-    <thead>
+<table class="table">
+    <thead class="thead-dark">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Id)
