--- a/BlazorWebAssembly/Shared/NavMenu.razor
+++ b/BlazorWebAssembly/Shared/NavMenu.razor
@@ -17,6 +17,16 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Counter
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/Food/List">
+                <span class="oi oi-spreadsheet" aria-hidden="true"></span> Menu
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/order/create">
+                <span class="oi oi-pencil" aria-hidden="true"></span> Create order
+            </NavLink>
+        </li>
     </ul>
 </div>
 
